2003-05-23  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: do early check of libiberty

2003-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_read.h: minor #include fix

2003-05-21  Philippe Elie  <phil.el@wanadoo.fr>

	* */Makefile.am:
	* configure.in: handle our own OP_CFLAGS, OP_CXXFLAGS to let user
	  free to use make CFLAGS=

2003-05-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/mangled-name.txt:
	* libregex/stl.pat.in: partial handling of _Identity<> and
	  _Select1st<>, pattern fail if type are too complex

2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: add list<T>::{const_}+iterator

2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: better handling of zero sample file size when
	  opening in read only mode

	* module/x86/op_nmi.c: printk format fix

2003-05-16  John Levon  <levon@movementarian.org>

	* pp/counter_profile.cpp: remove bogus cpu speed
	consistency check

2003-05-09  John Levon  <levon@movementarian.org>

	* m4/Makefile.am:
	* m4/compileroption.m4: add a generalised compiler option
	tester

	* configure.in: use it, add -fno-common

2003-05-09  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c:
	* dae/oprofiled.c: remove duplicate declaration found
	via -fno-common

2003-05-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: fix validation errors from xmllint --valid

2003-04-28  Alex Tsariounov  <alext@fc.hp.com>

	* module/ia64/op_pmu.c: fix compile

2003-04-24  Philippe Elie  <phil.el@wanadoo.fr>

	* module/compat22.h: add cpuid_edx when linux version < 2.2.21

2003-04-24  Dave Jones <davej@codemonkey.org.uk>

	* events/x86-64.hammer.events:
	* events/x86-64.hammer.unit_masks: typo fixes from AMD.
	* module/x86/cpu_type.c: Check for APIC on Athlon before enabling it.

2003-04-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386-ht.events: all events allow only one counter, remove
	  three events due to ESCR restricton.