@@ -14,9 +14,6 @@
 
 /** notcopyable : object of class derived from this class can't be copyed
  * neither copy-constructible */
-/* FIXME: take care using this class, it seems a bug in gcc 2.91 forgive to
- * use it blindly in some case (I do not know in which circumstances this bug
- * appears). */
 class noncopyable {
 protected:
 	noncopyable() {}
@@ -26,13 +23,6 @@ private:
         noncopyable const & operator=(noncopyable const &);
 };
 
-/// work round for 2.91, this means you can't derive from noncopyable
-/// in the usual way but rather you need to struct derived /*:*/ noncopyable
-#if __GNUC__ == 2 && __GNUC_MINOR__ == 91
-#define noncopyable
-#else
-#define noncopyable : noncopyable
-#endif
 
 template<typename T> class scoped_ptr {
 public:
